--- a/launch.css
+++ b/launch.css
@@ -3,14 +3,19 @@ body{
     background-color: rgb(111, 105, 105);
 }
 .container{
-    background-image: url("./images/wallpapertruck.jpg");
-    background-size: cover;
+    /*background-image: url("./images/ItalyRegions.png");
+    background-size: contain;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center;
+    background-position: center;*/
     width: 100vw;
     height: 100vh;
     margin: 0;
+}
+img.back{
+    height: 500px;
+    width: auto;
+
 }
 .menu{
     height: 100vh;
@@ -33,8 +38,8 @@ div.frame-container{
     position: relative;
 }
 #demo{
-    width: 100%;
-    height: 100%;
+    width: 1%;
+    height: 1%;
     margin: auto;
 }
 td{
