--- a/launch.css
+++ b/launch.css
@@ -2,30 +2,22 @@ body{
     margin: 0;
     /*background-color: rgb(68, 68, 68);*/
     background-image: url("./images/ItFlag.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .container{
-    /*background-image: url("./images/ItalyRegions.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;*/
     background-color: rgba(255, 255, 255, 0.15);
     position: relative;
     width: 100vw;
     height: 100vh;
     margin: 0;
+    display: flex;
 }
 img.back{
-    position: relative;
-    height: auto;
-    max-height: 100%;
-    width: auto;
-    max-width: 100%;
-    left: 360px;
-    cursor: default;
 }
 .menu{
-    height: 100vh;
+    height: 100%;
     width: 12vw;
     position: relative;
     text-align: center;
@@ -37,10 +29,10 @@ th,td{
     border-collapse: collapse;
 }
 div.frame-container{
-    float: left;
-    width: 88vw;
-    height: 90vh;
-    position: inherit;
+    width: 77%;
+    height: 100%;
+    display: grid;
+    place-content: center;
 }
 #demo{
     width: 1%;
